# routers/auth.js
@@ -6,7 +6,7 @@ const router = express.Router()
 
 router.post('/login', authController.login)
 router.post('/check', authController.checkEmail)
-
+router.post('/verify', authController.verifyToken)
 router.post('/register', cloud.uploadAvatar.single('avatar'), authController.register)
 
 export default router
